Fix path updating (hopefully)
It now works even after restarting your computer.